objects/Program_Package__c.object
<CustomObject>
    <fields>
        <fullName>Total_Adjusted_Program_Cost__c</fullName>
        <description>Filter Criteria: Status = &quot;Contracted&quot; &amp; Type = &quot;Accounting adjustment, Discount Allocation, Line of Business transfer&quot; 
Field to Aggregate:	Program (Royall)&gt; &apos;Program Cost&apos;</description>
        <inlineHelpText>Filter Criteria: Status = &quot;Contracted&quot; &amp; Type = &quot;Accounting adjustment, Discount Allocation, Line of Business transfer&quot; 
Field to Aggregate:	Program (Royall)&gt; &apos;Program Cost&apos;</inlineHelpText>
        <label>Total Adjusted Program Cost</label>
        <summarizedField>Royall_Program__c.Program_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Royall_Program__c.Type__c</field>
            <operation>equals</operation>
            <value>Accounting adjustment, Discount Allocation, Line of Business transfer</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contracted_Contact_Qty__c</fullName>
        <description>Sum of Contact Quantity for Programs listed as Contracted.</description>
        <inlineHelpText>This is the sum of the &quot;Contact Quantity&quot; field for programs listed as &quot;contracted&quot;.</inlineHelpText>
        <label>Total Contracted Contact Qty</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contracted_Postage_Cost__c</fullName>
        <description>SUM
Field to Aggregate: 	Program (Royall)&gt; &apos;Postage Cost&apos;
Filter Criteria: Status = &quot;Contracted&quot;</description>
        <inlineHelpText>SUM
Field to Aggregate: 	Program (Royall)&gt; &apos;Postage Cost&apos;
Filter Criteria: Status = &quot;Contracted&quot;</inlineHelpText>
        <label>Total Contracted Postage Cost</label>
        <summarizedField>Royall_Program__c.Postage_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Contracted_Program_Cost__c</fullName>
        <description>Filter Criteria: Status = &apos;Contracted&apos; 
Field to Aggregate: Program (Royall)&gt;&quot;Program Cost&quot;</description>
        <inlineHelpText>Filter Criteria: Status = &apos;Contracted&apos; 
Field to Aggregate: Program (Royall)&gt;&quot;Program Cost&quot;</inlineHelpText>
        <label>Total Contracted Program Cost</label>
        <summarizedField>Royall_Program__c.Program_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Signature_Contact_Qty__c</fullName>
        <description>Read-only (roll-up sum) -- This is the sum of the &quot;Contact Quantity&quot; field for programs listed as &quot;Pending Signature&quot; per fiscal year.</description>
        <inlineHelpText>This is the sum of the &quot;Contact Quantity&quot; field for programs listed as &quot;Pending Signature&quot; per fiscal year.</inlineHelpText>
        <label>Total &apos;Pending Signature&apos; Contact Qty</label>
        <summarizedField>Royall_Program__c.Contact_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Signature_Postage_Cost__c</fullName>
        <description>&lt;READ ONLY&gt; This is the sum ($) of the &quot;Postage Cost&quot; field for programs listed as &quot;Pending Signature&quot; per fiscal year.</description>
        <inlineHelpText>&lt;READ ONLY&gt; This is the sum ($) of the &quot;Postage Cost&quot; field for programs listed as &quot;Pending Signature&quot; per fiscal year.</inlineHelpText>
        <label>Total &apos;Pending Signature&apos; Postage Cost</label>
        <summarizedField>Royall_Program__c.Postage_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Signature_Program_Cost__c</fullName>
        <description>Filter Criteria: Status = &quot;Pending Signature&quot;
Field to Aggregate: Program (Royall)&gt; &quot;Program Cost&quot;</description>
        <inlineHelpText>Filter Criteria: Status = &quot;Pending Signature&quot;
Field to Aggregate: Program (Royall)&gt; &quot;Program Cost&quot;</inlineHelpText>
        <label>Total &apos;Pending Signature&apos; Program Cost</label>
        <summarizedField>Royall_Program__c.Program_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Royall_Program__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Royall_Program__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Invoice_Amount__c</fullName>
        <description>Field to Aggregate: Program Package INVOICE (Royall)&gt; &quot;Scheduled Gross Invoice Amount&quot;</description>
        <inlineHelpText>Field to Aggregate: Program Package INVOICE (Royall)&gt; &quot;Scheduled Gross Invoice Amount&quot;</inlineHelpText>
        <label>Total Scheduled Invoice Amount</label>
        <summarizedField>Invoice_Royall__c.Scheduled_Gross_Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Royall__c.Program_Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Program Package (Royall)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>FY_Date__c</columns>
        <columns>Total_Contracted_Program_Cost__c</columns>
        <columns>Account_Status__c</columns>
        <columns>Client_Status_New__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Packages (Royall)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Client_Loss_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>if(isblank( Client_Lost_Date__c) &amp;&amp; ispickval(Lost_To__c,&quot;&quot;) &amp;&amp; not(ispickval( Reason_for_Loss__c ,&quot;&quot;)), TRUE, 
if( ispickval(Lost_To__c,&quot;&quot;) &amp;&amp; not(isblank( Client_Lost_Date__c)) &amp;&amp; ispickval( Reason_for_Loss__c ,&quot;&quot;), TRUE, 
if(not(ispickval(Lost_To__c,&quot;&quot;)) &amp;&amp; isblank( Client_Lost_Date__c) &amp;&amp; ispickval( Reason_for_Loss__c ,&quot;&quot;), TRUE, 
if(not(isblank( Client_Lost_Date__c)) &amp;&amp; not(ispickval(Lost_To__c,&quot;&quot;)) &amp;&amp; ispickval( Reason_for_Loss__c ,&quot;&quot;), TRUE, 
if(isblank( Client_Lost_Date__c) &amp;&amp; not(ispickval(Lost_To__c,&quot;&quot;))&amp;&amp; not(ispickval( Reason_for_Loss__c ,&quot;&quot;)), TRUE, 
if(not(isblank( Client_Lost_Date__c)) &amp;&amp; not(ispickval( Reason_for_Loss__c ,&quot;&quot;)) &amp;&amp; ispickval(Lost_To__c,&quot;&quot;), TRUE, 
if(not(ispickval(Lost_To__c,&quot;&quot;))&amp;&amp; isblank( Client_Lost_Date__c) &amp;&amp; not(ispickval( Reason_for_Loss__c ,&quot;&quot;)), TRUE, FALSE)))))))</errorConditionFormula>
        <errorMessage>You must fill in Client Lost Date, Lost To and a Reason for Loss or leave all of them blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Engagement_status_validation</fullName>
        <active>true</active>
        <description>Only users with “Invoicing access” should be able to change to the value to “Secured”</description>
        <errorConditionFormula>ISCHANGED(Client_Status_New__c) &amp;&amp; ISPICKVAL(Client_Status_New__c, &quot;Secured&quot;) &amp;&amp; !$Permission.Invoicing_access</errorConditionFormula>
        <errorDisplayField>Client_Status_New__c</errorDisplayField>
        <errorMessage>Only users with &quot;invoicing access&quot; are able to change the value to &quot;Secured&quot;. Contact Accounting to make this update.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fiscal_year_validation</fullName>
        <active>true</active>
        <description>Fiscal Year must follow the YYYY format</description>
        <errorConditionFormula>AND(NOT(AND(ISNUMBER(Fiscal_Year__c), LEN(Fiscal_Year__c) = 4)), NOT(ISBLANK(Fiscal_Year__c)))</errorConditionFormula>
        <errorDisplayField>Fiscal_Year__c</errorDisplayField>
        <errorMessage>Fiscal Year must follow the YYYY format. For example, 2013.</errorMessage>
    </validationRules>
</CustomObject>